# diy-engine

./: .gitignore  ACTION_PLAN.md  BUILD.md  CMakeLists.txt  GETTING_STARTED.md  README.md  ROADMAP.md
src/: main.cpp
src/core/: framebuffer.cpp  framebuffer.h  window.cpp  window.h
src/core/math/: mat4.h
src/image/: color.h  primitives.h
src/math/: vec3.h
